--- a/requirements.txt
+++ b/requirements.txt
@@ -7,11 +7,16 @@ async-timeout==4.0.3
 attrs==23.2.0
 certifi==2024.7.4
 charset-normalizer==3.3.2
+click==8.1.7
+colorama==0.4.6
 dj-database-url==2.2.0
 Django==4.2.8
 frozenlist==1.4.1
+gunicorn==22.0.0
+h11==0.14.0
 idna==3.7
 multidict==6.0.5
+packaging==24.1
 psycopg2-binary==2.9.9
 PyJWT==2.8.0
 pyngrok==7.2.0
@@ -22,4 +27,6 @@ twilio==9.2.3
 typing_extensions==4.12.2
 tzdata==2024.1
 urllib3==2.2.2
+uvicorn==0.30.5
+whitenoise==6.7.0
 yarl==1.9.4
